--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div>
         <a href="https://wa.me/+919234266583?text= hello sir, I want id with 12% Bonus">
 
-    <img src= "C:\Users\sweta\Exchange.jpg" style="height: 600%;">
+    <img src= "Exchange.jpg" style="height: 600%;">
 
 
 </div>
